# trep-release

./: CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  read_before_releasing.md  releaser_history.json  rpm.store  setup.py  tracks.yaml
debian/: changelog  control  gbp.conf  rules
doc/: conf.py
ros/: package.xml  setup.py
rpm/: template.spec
src/: __version__.py
