<?xml version="1.0"?>
<package>
  <name>python_trep</name>
  <version>0.93.1</version>
  <description>Trep: Mechanical Simulation and Optimal Control Software</description>
  <author>Elliot Johnson</author>
  <author email="t-murphey@northwestern.edu">Todd Murphey</author>
  <maintainer email="jschultz@northwestern.edu">Jarvis Schultz</maintainer>
  <maintainer email="awilson@u.northwestern.edu">Andy Wilson</maintainer>
  <license>GPLv3</license>
  <url type="website">http://nxr.northwestern.edu/trep</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>python-scipy</build_depend>
  <build_depend>python-opengl</build_depend>
  <build_depend>python-imaging</build_depend>
  <build_depend>python-qt-bindings</build_depend>
  <build_depend>python-qt-bindings-gl</build_depend>
  <build_depend>python-matplotlib</build_depend>
  <build_depend>glut</build_depend>
  <run_depend>python</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-scipy</run_depend>
  <run_depend>python-opengl</run_depend>
  <run_depend>python-imaging</run_depend>
  <run_depend>python-qt-bindings</run_depend>
  <run_depend>python-qt-bindings-gl</run_depend>
  <run_depend>python-matplotlib</run_depend>
  <run_depend>glut</run_depend>

</package>
